--- a/AUTHORS
+++ b/AUTHORS
@@ -6,4 +6,4 @@ Mikhail Podivilov      - main developer
 Special thanks goes to
 ================================
 
-Ivan Vetoshkin for UX advices
+Ivan Vetoshkin for UX advice
